Eventual bug fix for layout issues. format looks appropriate but needs hover opacity/background colors for sdections.

--- a/assets/style.css
+++ b/assets/style.css
@@ -31,11 +31,6 @@ header img {
     max-height: 300px;
     width: auto;
     box-shadow: var(--shadow);
-    position: right;
-}
-
-header nav {
-    margin:20px;
 }
 
 header h1 {
@@ -46,13 +41,31 @@ header h1 {
     text-shadow: var(--shadow);
 }
 
+header nav {
+    margin:20px;
+}
+
+header-image {
+    padding-top: 10px;
+    padding: 10px;
+    box-shadow: var(--shadow);
+    border-radius:50%;
+}
+
+header a {
+    text-decoration: none;
+    color: var(--secondary);
+}
+
 header nav ul {
     display:flex;
     flex-wrap: wrap;
     justify-content: center;
     list-style:none;
 }
-
+header-nav {
+    margin: 20px;
+}
 header nav ul li a {
     padding:8px;
     font-size:20px;
@@ -72,7 +85,7 @@ header nav ul li a {
 }
 
 .hero h2 {
-    position: relative;
+    position: absolute;
     top: 5px;
     left: 5px;
     border-radius: 15px;
@@ -85,6 +98,23 @@ header nav ul li a {
     color:lightblue;
     border-radius: 16px;
 }
+
+.title {
+    border-right: 5px solid var(--alt) ;
+    min-height: 100%;
+    text-align: right;
+    text-shadow: var(--shadow);
+    padding-right: 40px;
+    min-width: 20%;
+    max-width: 20%;
+    margin: 10px 0;
+  }
+
+  .title h2 {
+    padding-top: 30px;
+    font-size: 35px;
+  }
+
 
 /* About Me Guts*/
 
@@ -123,6 +153,7 @@ header nav ul li a {
     width:90%;
     box-sizing: border-box;
     padding: var(--gap);
+
     display: grid;
     grid-template-columns: repeat(var(--num-cols), 1fr);
     grid-auto-rows: var(--row-height);
@@ -133,6 +164,7 @@ header nav ul li a {
     width:100%;
     height:100%;
     object-fit: cover;
+    position:relative;
 }
 .img-grid-col-2 {
     grid-column: span 2;
@@ -146,7 +178,7 @@ header nav ul li a {
     grid-column: 1/3;
     grid-row: span 2;
     background-image: url("./images/run-buddy.png");
-    background-position: none;
+    background-position: auto;
 }
 
 .soon {
@@ -154,32 +186,86 @@ header nav ul li a {
 }
 
 .project-label {
-    position: relative;
+    position: absolute;
     float: right;
     background-color: var(--alt);
     color: var(--primary);
     padding: 10px;
     font-size: 20px;
 }
+
 /*Footer guts*/
 
 .contact {
     display: flex;
     justify-content: space-between;
     padding: 10px 0px;
-    flex-direction: column;
-    margin-bottom: 10px;
-    text-align:center;
 }
 
 .contact title {
     color:black;
 }
 
-.contact a {
-    font-size: 10px
+.info {
+    padding: 10px 15px 0 0;
 }
 
-.image-grid {
-    width:100%
+.info a {
+    color:black;
+    font-size:20px;
+    text-shadow: var(--shadow);
 }
+
+@media screen and (max-width: 780px) {
+    .title {
+      border-right: none;
+      text-decoration: underline var(--alt);
+      min-height: none;
+      padding-right: none;
+      padding: 0px 5px 0px 5px;
+      margin: 0px, 2px, 0px, 2px;
+      min-width: none;
+      max-width: none;
+      text-align: center;
+    }
+  
+    .about-me {
+      flex-direction: column;
+      border-right: none;
+    }
+    .my-work {
+      flex-direction: column;
+    }
+  
+    .image-grid {
+      width: 100%;
+    }
+    .contact {
+      flex-direction: column;
+      margin-bottom: 10px;
+    }
+  
+    .info {
+      text-align: center;
+    }
+  }
+  
+    .contact-info a {
+      font-size: 12px;
+    }
+  
+@media screen and (min-width: 768px) {
+      header nav ul li a:hover {
+      background: var(--alt);
+      color: var(--primary);
+      border-radius: 15px;
+    }
+  
+    .image-grid a {
+      opacity: .75;
+    }
+  
+    .image-grid a:hover {
+      opacity: 6;
+    }
+  } 
